Add html structure

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,8 @@
-<footer class="page__footer">
+<footer>
   <small>
-    &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
-      aClass="link__adalab"
-      text="Adalab"
-      url="https://adalab.es"
-    ></include>
+    Awesome profile-cards @2018
   </small>
+  <a href="">
+    <img src="./assets/images/logo-adalab.png" alt="logo Adalab">
+  </a>
 </footer>
