--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,40 +1,23 @@
-<main class="page__main">
-  <h2>Este es el starter kit de Adalab</h2>
-  <p>Lo usamos para aprender:</p>
-  <ul class="main__list">
-    <li>Sass</li>
-    <li>HTML partials</li>
-    <li>Gulp</li>
-    <li>y muchas cosas más</li>
-  </ul>
-  <p>Si quieres saber cúales son las rutas correctas para:</p>
-  <ul class="main__list">
-    <li>
-      una <code class="code">&lt;img /&gt;</code> mira el fichero
-      <code class="code">./src/html/partials/header.html</code>.
-    </li>
-    <li>
-      y para un <code class="code">background-image</code> mira el fichero
-      <code class="code">./src/html/scss/layout/_page.scss</code>.
-    </li>
-  </ul>
-  <p>
-    Si quieres saber cómo usar un partial HTML dentro de otro partial, busca en la carperta
-    <code class="code">./src/html/index.html</code> y
-    <code class="code">./src/html/partials/main.html</code>, y verás cómo estamos creando estos
-    enlaces:
-  </p>
-  <ul class="main__list">
-    <li>
-      <include
-        src="./link.html"
-        aClass="link__adalab"
-        text="Adalab"
-        url="https://adalab.es"
-      ></include>
-    </li>
-    <li>
-      <include src="./link.html" text="Más info del starter kit" url="./more-info.html"></include>
-    </li>
-  </ul>
+<main class="container">
+  <img src="./assets/images/logo-awesome-profile-cards.svg" alt="logo awesome">
+  <h1>Crea tu tarjeta de visita</h1>
+  <p>Crea mejores contactos profesionales de forma fácil y cómoda</p>
+  <section>
+    <div>
+      <i class="far fa-object-ungroup"></i>
+      <p>Diseña
+      </p>
+    </div>
+    <div>
+      <p>
+      </p>
+    </div>
+    <div>
+      <p>
+      </p>
+    </div>
+  </section>
+  <a href="">
+    Comenzar
+  </a>
 </main>
