--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,23 +1,22 @@
 <main class="container">
-  <img src="./assets/images/logo-awesome-profile-cards.svg" alt="logo awesome">
-  <h1>Crea tu tarjeta de visita</h1>
-  <p>Crea mejores contactos profesionales de forma fácil y cómoda</p>
-  <section>
-    <div>
-      <i class="far fa-object-ungroup"></i>
-      <p>Diseña
-      </p>
+  <img class="container__logo" src="./assets/images/logo-awesome-profile-cards.svg" alt="logo awesome">
+  <h1 class="container__title">Crea tu tarjeta de visita</h1>
+  <p class="container__paragraph">Crea mejores contactos profesionales de forma fácil y cómoda</p>
+  <section class="container__box">
+    <div class="item">
+      <i class="far fa-object-ungroup item__square"></i>
+      <p class="item__word">Diseña</p>
     </div>
-    <div>
-      <p>
-      </p>
+    <div class="item">
+      <i class="far fa-keyboard item__square"></i>
+      <p class="item__word">Rellena</p>
     </div>
-    <div>
-      <p>
-      </p>
+    <div class="item">
+      <i class="fas fa-share-alt item__square"></i>
+      <p class="item__word">Comparte</p>
     </div>
   </section>
-  <a href="">
+  <a href="" class="container__button">
     Comenzar
   </a>
 </main>
