--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,14 @@
 // fonts
-$font-main: 'Roboto', sans-serif;
+$font-main: 'Open Sans', sans-serif;
+$font-landing: 'Merriweather', serif;
+$font-card: 'Montserrat', sans-serif;
 
 // colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+$color-icon: #e17334;
+$color-main: #114e4e;
+$color-button: #438792;
+$color-fontMain: #54585a;
+$color-light: #ffffff;
+$color-background: #f5f5f5;
+
+
