--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,10 @@
 @import 'core/variables';
 @import 'core/reset';
+@import 'core/mixins';
 @import 'components/code';
 @import 'components/links';
-@import 'layout/page';
+@import 'layout/landing-main';
 @import 'layout/header';
 @import 'layout/footer';
 @import 'pages/index';
+
