--- a/src/html/partials/headerCard.html
+++ b/src/html/partials/headerCard.html
@@ -1,6 +1,7 @@
 <header class="header">
   <a href="./index.html">
     <img
+      class="header__img"
       src="./assets/images/logo-awesome-profile-cards.svg"
       title="Go to home page"
       alt="Awesome cards logo"
