--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -1,7 +1,7 @@
 <section class="generator">
-  <div class="generator__button1"></div>
+  <div class="generator__button1">Reset</div>
   <div class="generator__container">
-    <h2 class="generator__container--name">Nombre y Apellido</h2>
+    <h2 class="generator__container--name">Nombre Apellido</h2>
     <h3 class="generator__container--profession">Profesión</h3>
     <img class="generator__container--img" src="" alt="" title="" />
     <nav class="generator__container--nav">
