--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -16,7 +16,7 @@
       <p class="item__word">Comparte</p>
     </div>
   </section>
-  <a href="" class="container__button">
+  <a href="" title="" class="container__button">
     Comenzar
   </a>
-</main>
+che</main>
