--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,7 +1,7 @@
 // fonts
-$font-main: 'Open Sans', sans-serif;
-$font-landing: 'Merriweather', serif;
-$font-card: 'Montserrat', sans-serif;
+$font-main: "Open Sans", sans-serif;
+$font-landing: "Merriweather", serif;
+$font-card: "Montserrat", sans-serif;
 
 // colors
 $color-icon: #e17334;
@@ -10,5 +10,4 @@ $color-button: #438792;
 $color-fontMain: #54585a;
 $color-light: #ffffff;
 $color-background: #f5f5f5;
-
-
+$color-borderFooter: #d8d8d8;
