Add scss partials

--- a/src/scss/pages/_card.scss
+++ b/src/scss/pages/_card.scss
@@ -1,4 +1,7 @@
 @import "layout/headerCard.scss";
 @import "layout/generatorCard.scss";
 @import "layout/formCard.scss";
+@import "layout/form/design.scss";
+@import "layout/form/fill.scss";
+@import "layout/form/share.scss";
 @import "layout/footer.scss";
