--- a/src/html/partials/formCard.html
+++ b/src/html/partials/formCard.html
@@ -1,105 +1,5 @@
 <form action="create card" method="GET">
-  <!--design section-->
-  <fieldset>
-    <legend>
-      <h2>
-        <span>icono</span>
-        <span>diseña</span>
-        <span>flecha</span>
-      </h2>
-    </legend>
-    <label for="">
-      <input type="radio" name="palette" checked />
-      <ul class="palette1">
-        <li>colorA</li>
-        <li>colorB</li>
-        <li>colorC</li>
-      </ul>
-    </label>
-    <label for="">
-      <input type="radio" name="palette" />
-      <ul class="palette2">
-        <li>colorA</li>
-        <li>colorB</li>
-        <li>colorC</li>
-      </ul>
-    </label>
-    <label for="">
-      <input type="radio" name="palette" />
-      <ul class="palette3">
-        <li>colorA</li>
-        <li>colorB</li>
-        <li>colorC</li>
-      </ul>
-    </label>
-  </fieldset>
-  <!-- fill section-->
-  <fieldset>
-    <legend>
-      <h2>
-        <span>icono</span>
-        <span>rellena</span>
-        <span>flecha</span>
-      </h2>
-    </legend>
-    <label for="Name">Nombre Completo</label>
-    <input
-      placeholder="María García"
-      type="text"
-      id="name"
-      name="name"
-      required
-    />
-    <label for="job">Trabajo</label>
-    <input
-      placeholder="Programadora front-end"
-      type="text"
-      id="job"
-      name="job"
-      required
-    />
-    <div>
-      <label for="photo"> Imagen de Perfil</label>
-      <input type="file" id="photo" name="photo" required />
-      <button type="button">Añadir Imagen</button>
-      <div>Previsualización</div>
-    </div>
-    <label for="email">Email</label>
-    <input
-      placeholder="maria.garcia@example.com"
-      type="email"
-      id="email"
-      name="email"
-      pattern=" ^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
-      required
-    />
-    <label for="phone">Teléfono</label>
-    <input
-      placeholder="+34 666666666"
-      type="tel"
-      id="phone"
-      name="phone"
-      pattern="^\+(?:[0-9]●?){6,14}[0-9]$
-     "
-      required
-    />
-    <label for="linkedin">Nombre de usuario de LinkedIn</label>
-    <input placeholder="mariagar" type="url" id="linkedin" name="linkedin" />
-    <label for="github">Nombre de usuario de GitHub</label>
-    <input placeholder="mariagar" type="url" id="github" name="github" />
-  </fieldset>
-  <!--Secction share-->
-  <legend>
-    <h2>
-      <span>icono</span>
-      <span>comparte</span>
-      <span>flecha</span>
-    </h2>
-  </legend>
-  <button type="submit" title="Create card"></button>
-  <div>
-    <h3>La tarjeta ha sido creada</h3>
-    <a href="" target="_blank">link awesome profile card</a>
-    <a href="" target="_blank">link twitter</a>
-  </div>
+  <include src="./form/design.html"> </include>
+  <include src="./form/fill.html"> </include>
+  <include src="./form/share.html"> </include>
 </form>
