Add scss partials corrections

--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -1,15 +1,16 @@
 <!--design section-->
-<fieldset>
-    <legend>
-      <h2>
-        <span>icono</span>
-        <span>diseña</span>
-        <span>flecha</span>
-      </h2>
-    </legend>
+<fieldset class="design">
+  <legend>
+    <h2 class="design__title">
+      <span>icono</span>
+      <span>diseña</span>
+      <span>flecha</span>
+    </h2>
+  </legend>
+  <div class="design__palette">
     <label for="">
-      <input type="radio" name="palette" checked />
-      <ul class="palette1">
+      <input class="design__palette--1" type="radio" name="palette" checked />
+      <ul>
         <li>colorA</li>
         <li>colorB</li>
         <li>colorC</li>
@@ -31,4 +32,5 @@
         <li>colorC</li>
       </ul>
     </label>
-  </fieldset>
+  </div>
+</fieldset>
