--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -1,7 +1,7 @@
 <!-- fill section-->
 <fieldset>
   <legend>
-    <h2>
+    <h2 class="tittle2">
       <span>icono</span>
       <span>rellena</span>
       <span>flecha</span>
