Add design scss partial styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,9 @@
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
+@import "layout/headerCard.scss";
+@import "layout/generatorCard.scss";
+@import "layout/formCard.scss";
+@import "layout/form/design.scss";
+@import "layout/form/fill.scss";
+@import "layout/form/share.scss";
