--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -11,3 +11,12 @@ $color-fontMain: #54585a;
 $color-light: #ffffff;
 $color-background: #f5f5f5;
 $color-borderFooter: #d8d8d8;
+$palette1-color1: #114e4e;
+$palette1-color2: #438792;
+$palette1-color3: #a2deaf;
+$palette2-color1: #420101;
+$palette2-color2: #bd1010;
+$palette2-color3: #e95626;
+$palette3-color1: #3e5b65;
+$palette3-color2: #eab052;
+$palette3-color3: #a0c0cf;
