--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,7 @@
-@import 'core/variables';
-@import 'core/reset';
-@import 'core/mixins';
-@import 'components/code';
-@import 'components/links';
-@import 'layout/landing-main';
-@import 'layout/header';
-@import 'layout/footer';
-@import 'pages/index';
-
+@import "core/variables";
+@import "core/reset";
+@import "core/mixins";
+@import "layout/landing-main";
+@import "layout/header";
+@import "layout/footer";
+@import "pages/index";
