--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -1,11 +1,11 @@
 <!-- fill section-->
-<fieldset>
-  <legend>
-    <h2 class="tittle2">
-      <span>icono</span>
-      <span>rellena</span>
-      <span>flecha</span>
-    </h2>
+<fieldset class="fill">
+  <legend class="fill__title">
+    <div class="fill__title--container">
+      <i class="far fa-keyboard fill__title--icon"></i>
+      <h2 class="fill__title--word">rellena</h2>
+    </div>
+    <i class="fas fa-chevron-up fill__title--arrow"></i>
   </legend>
   <label for="Name">Nombre Completo</label>
   <input
