--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -25,7 +25,7 @@
   />
   <div>
     <label for="photo"> Imagen de Perfil</label>
-    <input type="file" id="photo" name="photo" required />
+    <input class="buttonimg" type="file" id="photo" name="photo" required />
     <button type="button">Añadir Imagen</button>
     <div>Previsualización</div>
   </div>
