Add styles to share section

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -1,6 +1,6 @@
 <!-- fill section-->
 <fieldset>
-  <legend>
+  <legend></legend>
     <h2 class="tittle2">
       <span>icono</span>
       <span>rellena</span>
