--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -1,14 +1,16 @@
 <!--Secction share-->
-<legend>
-  <h2>
-    <span>icono</span>
-    <span>comparte</span>
-    <span>flecha</span>
-  </h2>
+<fieldset class="share">
+  <legend class="share__title">
+    <h2>
+      <span class="share__title--item"><i class="fas fa-share-alt"></i></span>
+      <span class="share__title--word">Comparte</span>
+      <span class="share__title--arrow"><i class="fas fa-chevron-up"></i></span>
+    </h2>
 </legend>
-<button type="submit" title="Create card"></button>
-<div>
-  <h3>La tarjeta ha sido creada</h3>
-  <a href="" target="_blank">link awesome profile card</a>
-  <a href="" target="_blank">link twitter</a>
+<button class="share__button" type="submit" title="Create card"><i class="share__button--icon far fa-address-card"></i>Crear tarjeta</button>
+<div class="share__subsection">
+  <h3 class="share__subsection--title">La tarjeta ha sido creada</h3>
+  <a class="share__subsection--link" href="" target="_blank">link awesome profile card</a>
+  <a class="share__subsection--twitter"href="" target="_blank"><i class="icon fab fa-twitter"></i>Compartir en twitter</a>
 </div>
+</fieldset>
