--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -12,3 +12,4 @@ $color-light: #ffffff;
 $color-background: #f5f5f5;
 $color-borderFooter: #d8d8d8;
 $color-border-form: #a2deaf;
+$colorInactive: #d5d5d5;
