--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -7,16 +7,18 @@
     </div>
     <i class="fas fa-chevron-up fill__title--arrow"></i>
   </legend>
-  <label for="Name">Nombre Completo</label>
+  <label class="fill__label name" for="Name">Nombre Completo</label>
   <input
+    class="fill__input"
     placeholder="María García"
     type="text"
     id="name"
     name="name"
     required
   />
-  <label for="job">Trabajo</label>
+  <label class="fill__label" for="job">Trabajo</label>
   <input
+    class="fill__input job"
     placeholder="Programadora front-end"
     type="text"
     id="job"
@@ -24,13 +26,20 @@
     required
   />
   <div>
-    <label for="photo"> Imagen de Perfil</label>
-    <input class="buttonimg" type="file" id="photo" name="photo" required />
-    <button type="button">Añadir Imagen</button>
-    <div>Previsualización</div>
+    <label class="fill__label" for="photo"> Imagen de perfil</label>
+    <input
+      class="fill__input buttonImg"
+      type="file"
+      id="photo"
+      name="photo"
+      required
+    />
+    <button class="fill__input button2" type="button">Añadir imagen</button>
+    <div class="preview"></div>
   </div>
-  <label for="email">Email</label>
+  <label class="fill__label" for="email">Email</label>
   <input
+    class="fill__input"
     placeholder="maria.garcia@example.com"
     type="email"
     id="email"
@@ -38,8 +47,9 @@
     pattern=" ^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
     required
   />
-  <label for="phone">Teléfono</label>
+  <label class="fill__label" for="phone">Teléfono</label>
   <input
+    class="fill__input"
     placeholder="+34 666666666"
     type="tel"
     id="phone"
@@ -48,8 +58,22 @@
      "
     required
   />
-  <label for="linkedin">Nombre de usuario de LinkedIn</label>
-  <input placeholder="mariagar" type="url" id="linkedin" name="linkedin" />
-  <label for="github">Nombre de usuario de GitHub</label>
-  <input placeholder="mariagar" type="url" id="github" name="github" />
+  <label class="fill__label" for="linkedin"
+    >Nombre de usuario de LinkedIn</label
+  >
+  <input
+    class="fill__input"
+    placeholder="mariagar"
+    type="url"
+    id="linkedin"
+    name="linkedin"
+  />
+  <label class="fill__label" for="github">Nombre de usuario de GitHub</label>
+  <input
+    class="fill__input"
+    placeholder="mariagar"
+    type="url"
+    id="github"
+    name="github"
+  />
 </fieldset>
