--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -1,15 +1,15 @@
 <!--Secction share-->
 <fieldset class="share">
   <legend class="share__title">
-    <h2>
-      <span class="share__title--item"><i class="fas fa-share-alt"></i></span>
-      <span class="share__title--word">Comparte</span>
-      <span class="share__title--arrow"><i class="fas fa-chevron-up"></i></span>
-    </h2>
-</legend>
+    <div class="share__title--container">
+      <i class="share__title--item fas fa-share-alt"></i>
+      <h2 class="share__title--word">Comparte</h2>
+      </div>
+      <i class="share__title--arrow fas fa-chevron-up"></i>
+  </legend>
 <button class="share__button" type="submit" title="Create card"><i class="share__button--icon far fa-address-card"></i>Crear tarjeta</button>
 <div class="share__subsection">
-  <h3 class="share__subsection--title">La tarjeta ha sido creada</h3>
+  <h3 class="share__subsection--title">La tarjeta ha sido creada:</h3>
   <a class="share__subsection--link" href="" target="_blank">link awesome profile card</a>
   <a class="share__subsection--twitter"href="" target="_blank"><i class="icon fab fa-twitter"></i>Compartir en twitter</a>
 </div>
