--- a/src/scss/layout/form/_design.scss
+++ b/src/scss/layout/form/_design.scss
@@ -23,7 +23,7 @@
     }
 
     &--word {
-      font-size: 18px;
+      font-size: 1, 12rem;
       font-weight: 600;
       margin-left: 8px;
     }
@@ -47,7 +47,7 @@
     justify-content: space-between;
 
     &--colors {
-      font-size: 14px;
+      font-size: 0, 87rem;
       font-weight: normal;
       text-transform: uppercase;
       margin: 22px 0 0 19px;
