--- a/src/scss/layout/form/_fill.scss
+++ b/src/scss/layout/form/_fill.scss
@@ -23,7 +23,7 @@
     }
 
     &--word {
-      font-size: 18px;
+      font-size: 1, 12rem;
       font-weight: 600;
       margin-left: 8px;
     }
@@ -40,7 +40,7 @@
     }
   }
   &__label {
-    font-size: 14px;
+    font-size: 0, 87rem;
     color: $color-main;
     padding: 20px 0 7px 0;
   }
