Add changes to form

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -2,8 +2,8 @@
 <fieldset class="fill">
   <legend class="fill__title">
     <div class="fill__title--container">
-      <i class="far fa-keyboard fill__title--icon"></i>
-      <h2 class="fill__title--word">rellena</h2>
+      <i class="far fa-keyboard icon"></i>
+      <h2 class="word">rellena</h2>
     </div>
     <i class="fas fa-chevron-up fill__title--arrow"></i>
   </legend>
