--- a/src/html/partials/form/share.html
+++ b/src/html/partials/form/share.html
@@ -2,8 +2,8 @@
 <fieldset class="share">
   <legend class="share__title">
     <div class="share__title--container">
-      <i class="share__title--item fas fa-share-alt"></i>
-      <h2 class="share__title--word">Comparte</h2>
+      <i class="icon fas fa-share-alt"></i>
+      <h2 class="word">Comparte</h2>
       </div>
       <i class="share__title--arrow fas fa-chevron-up"></i>
   </legend>
