--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -2,10 +2,10 @@
 <fieldset class="design">
   <legend class="design__title">
     <div class="design__title--container">
-      <i class="far fa-object-ungroup design__title--icon"></i>
-      <h2 class="design__title--word">diseña</h2>
+      <i class="far fa-object-ungroup icon"></i>
+      <h2 class="word">diseña</h2>
     </div>
-    <i class="fas fa-chevron-up design__title--arrow"></i>
+    <i class="fas fa-chevron-up arrow"></i>
   </legend>
 
   <div class="design__palette">
