--- a/src/scss/layout/form/_share.scss
+++ b/src/scss/layout/form/_share.scss
@@ -7,26 +7,26 @@
   align-items: center;
   &__title {
     width: 100%;
+    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     text-transform: uppercase;
+    flex-wrap: nowrap;
     &--container {
       display: flex;
       justify-content: flex-start;
       align-items: center;
-    }
-    &--item {
-      width: 21px;
-      color: $color-icon;
-      font-size: 1.125rem;
-      // padding: 13px 6px 33px 0;
-    }
-    &--word {
-      @include t($font-main, 1.125rem, $color-fontMain);
-      // padding: 10px 80px 30px 6px;
-      font-weight: 600;
-      margin-left: 8px;
+      .icon {
+        width: 21px;
+        color: $color-icon;
+        font-size: 1.125rem;
+      }
+      .word {
+        @include t($font-main, 1.125rem, $color-fontMain);
+        font-weight: 600;
+        margin-left: 8px;
+      }
     }
     &--arrow {
       width: 16px;
