Add design and fill sections styles changes

--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -12,8 +12,8 @@
     <h3 class="design__palette--colors">Colores</h3>
     <div>
       <label class="design__palette--input" for="">
-        <input type="radio" name="palette" checked />
-        <ul class="design__palette--list">
+        <input class="design__palette1" type="radio" name="palette" checked />
+        <ul class="design__palette--list design__palette1">
           <li class="design__palette1--color1">colorA</li>
           <li class="design__palette1--color2">colorB</li>
           <li class="design__palette1--color3">colorC</li>
