--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -25,16 +25,16 @@
     name="job"
     required
   />
-  <div>
-    <label class="fill__label" for="photo"> Imagen de perfil</label>
-    <input
-      class="fill__input buttonImg"
-      type="file"
-      id="photo"
-      name="photo"
-      required
-    />
-    <button class="fill__input button2" type="button">Añadir imagen</button>
+  <label class="fill__label imgLabel" for="photo"> Imagen de perfil</label>
+  <input
+    class="fill__input buttonInput"
+    type="file"
+    id="photo"
+    name="photo"
+    required
+  />
+  <div class="addImage">
+    <button class="fill__input buttonImg" type="button">Añadir imagen</button>
     <div class="preview"></div>
   </div>
   <label class="fill__label" for="email">Email</label>
