--- a/src/scss/layout/form/_design.scss
+++ b/src/scss/layout/form/_design.scss
@@ -1,12 +1,12 @@
 .design {
   border: 0px;
   padding-bottom: 30px;
-  background-color: $color-light;
   font-family: $font-main;
   color: $color-fontMain;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  border-bottom: 1px solid $color-borderFooter;
 
   &__title {
     width: 100%;
@@ -66,6 +66,7 @@
     }
   }
   &__palette1 {
+    margin-top: 8px;
     &--color1 {
       width: 30px;
       height: 25px;
