--- a/src/scss/layout/_landing-main.scss
+++ b/src/scss/layout/_landing-main.scss
@@ -1,4 +1,5 @@
 .container {
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -44,14 +45,12 @@
     }
   }
   &__button {
-      background-color: $color-button;
-      width: 129px;
-      height: 42px;
-      border-radius: 21px;
-      padding: 10px 20px;
-      @include t($font-main, 1rem, $color-light);
-      text-align: center;
+    background-color: $color-button;
+    width: 129px;
+    height: 42px;
+    border-radius: 21px;
+    padding: 10px 20px;
+    @include t($font-main, 1rem, $color-light);
+    text-align: center;
   }
 }
-
-
