Add image button corrections for fill section

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -26,15 +26,9 @@
     required
   />
   <label class="fill__label imgLabel" for="photo"> Imagen de perfil</label>
-  <input
-    class="fill__input buttonInput"
-    type="file"
-    id="photo"
-    name="photo"
-    required
-  />
   <div class="addImage">
     <button class="fill__input buttonImg" type="button">Añadir imagen</button>
+    <input class="buttonInput" type="file" id="photo" name="photo" required />
     <div class="preview"></div>
   </div>
   <label class="fill__label" for="email">Email</label>
