Add mixins and changes to footer

--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -1,5 +1,15 @@
 @mixin t($fontFamily, $fonSize, $fontColor) {
-    font-family: $fontFamily;
-    font-size: $fonSize;
-    color: $fontColor;
+  font-family: $fontFamily;
+  font-size: $fonSize;
+  color: $fontColor;
+}
+@mixin tablet {
+  @media screen and (min-width: 768px) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media screen and (min-width: 1200px) {
+    @content;
+  }
 }
