--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,11 +1,12 @@
 .footer {
   width: 100%;
-  height: 20vh;
+  height: 110px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
   background-color: $color-light;
-  border: solid 1px $color-borderFooter;
+  // border: solid 1px $color-borderFooter;
   padding: 18px 0 20px;
   &__small {
     @include t($font-main, 0.87rem, rgba(107, 107, 107, 0.5));
