Add responsive for form and generator cards

--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -1,5 +1,5 @@
 <section class="generator">
-  <div class="generator__button1"><i class="far fa-trash-alt"></i>Reset</div>
+  <div class="generator__button1"><span class="generator__button1--reset"><i class="far fa-trash-alt"></i>Reset</span></div>
   <div class="generator__container">
     <h2 class="generator__container--name">Nombre apellido</h2>
     <h3 class="generator__container--profession">Profesión</h3>
