--- a/src/scss/layout/_landing-main.scss
+++ b/src/scss/layout/_landing-main.scss
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 95px 35px 30px;
   background-color: $color-background;
+  height: 85vh;
   &__logo {
     width: 250px;
     height: 63px;
