--- a/src/scss/layout/_landing-main.scss
+++ b/src/scss/layout/_landing-main.scss
@@ -1,3 +1,5 @@
+//@include tablet {}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -6,22 +8,41 @@
   padding: 95px 35px 30px;
   background-color: $color-background;
   height: 85vh;
+  @include tablet {
+    padding: 350px 174px 59px 175px;
+    justify-content: flex-start;
+    height: 94vh;
+  }
+
   &__logo {
     width: 250px;
     height: 63px;
     object-fit: contain;
     margin-bottom: 35px;
+    @include tablet {
+      width: 419px;
+      height: 105px;
+      margin-bottom: 31px;
+    }
   }
   &__title {
     @include t($font-landing, 1.2rem, $color-icon);
     text-align: center;
     font-weight: 900;
+    @include tablet {
+      font-size: 1.5rem;
+    }
   }
   &__paragraph {
     @include t($font-main, 0.8rem, $color-main);
     text-align: center;
     width: 264.8px;
     margin-bottom: 17.8px;
+    @include tablet {
+      font-size: 1rem;
+      width: 331px;
+      margin-bottom: 27px;
+    }
   }
   &__box {
     display: grid;
@@ -33,14 +54,25 @@
     border: solid 1.6px rgba(225, 115, 52, 0.21);
     width: 268px;
     margin-bottom: 39px;
+    @include tablet {
+      margin-bottom: 186px;
+      width: 325px;
+      grid-template-rows: 86px;
+    }
     .item {
       text-align: center;
       &__square {
         color: $color-icon;
         font-size: 1.4rem;
+        @include tablet {
+          font-size: 1.75rem;
+        }
       }
       &__word {
         @include t($font-main, 0.8rem, $color-fontMain);
+        @include tablet {
+          font-size: 1rem;
+        }
       }
     }
   }
@@ -50,6 +82,7 @@
     height: 42px;
     border-radius: 21px;
     padding: 10px 20px;
+    text-transform: uppercase;
     @include t($font-main, 1rem, $color-light);
     text-align: center;
   }
