--- a/src/scss/layout/form/_fill.scss
+++ b/src/scss/layout/form/_fill.scss
@@ -72,6 +72,8 @@
       box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
       padding-top: 7px;
       background-color: $color-icon;
+      font-family: $font-main;
+      font-size: 0.875rem;
       color: $color-light;
       text-align: center;
       line-height: 1.43;
