Add template engine for form legends

--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -1,12 +1,12 @@
 <!--design section-->
 <fieldset class="design">
-  <legend class="design__title">
-    <div class="design__title--container">
-      <i class="far fa-object-ungroup icon"></i>
-      <h2 class="word">diseña</h2>
-    </div>
-    <i class="fas fa-chevron-up arrow"></i>
-  </legend>
+  <include
+    src="./titles.html"
+    classTitle="design__title"
+    classTitleContainer="design__title--container"
+    classIcon="far fa-object-ungroup icon"
+    section="Diseña"
+  ></include>
 
   <div class="design__palette">
     <h3 class="design__palette--colors">Colores</h3>
