--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -1,12 +1,13 @@
 <!-- fill section-->
 <fieldset class="fill">
-  <legend class="fill__title">
-    <div class="fill__title--container">
-      <i class="far fa-keyboard icon"></i>
-      <h2 class="word">rellena</h2>
-    </div>
-    <i class="fas fa-chevron-up fill__title--arrow"></i>
-  </legend>
+  <include
+    src="./titles.html"
+    classTitle="fill__title"
+    classTitleContainer="fill__title--container"
+    classIcon="far fa-keyboard icon"
+    section="Rellena"
+  ></include>
+
   <label class="fill__label name" for="Name">Nombre Completo</label>
   <input
     class="fill__input"
