--- a/src/scss/layout/form/_design.scss
+++ b/src/scss/layout/form/_design.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  border-bottom: 1px solid $color-borderFooter;
   &__title {
     width: 100%;
     display: flex;
