Add changes for a responsive for generator part and add paddings for share part

--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -1,16 +1,18 @@
 <section class="generator">
-  <div class="generator__button1"><span class="generator__button1--reset"><i class="far fa-trash-alt"></i>Reset</span></div>
-  <div class="generator__container">
-    <h2 class="generator__container--name">Nombre apellido</h2>
-    <h3 class="generator__container--profession">Profesión</h3>
-    <img class="generator__container--img" src="./assets/images/lady.jpg" alt="" title="" />
-    <nav class="generator__container--nav">
-      <ul class="menu" >
-        <li class="menu__item"><i class="menu__item--icon fas fa-mobile-alt"></i></li>
-        <li class="menu__item"><i class="menu__item--icon far fa-envelope"></i></li>
-        <li class="menu__item"><i class="menu__item--icon fab fa-linkedin-in"></i></li>
-        <li class="menu__item"><i class="menu__item--icon fab fa-github-alt"></i></li>
-      </ul>
-    </nav>
-  </div>
+  <article class="generator__article">
+    <div class="generator__article--button1"><i class="far fa-trash-alt"></i>Reset</div>
+    <div class="generator__article--container">
+      <h2 class="container__name">Nombre apellido</h2>
+      <h3 class="container__profession">Profesión</h3>
+      <img class="container__img" src="./assets/images/lady.jpg" alt="" title="" />
+      <nav class="container__nav">
+        <ul class="menu" >
+          <li class="menu__item"><i class="menu__item--icon fas fa-mobile-alt"></i></li>
+          <li class="menu__item"><i class="menu__item--icon far fa-envelope"></i></li>
+          <li class="menu__item"><i class="menu__item--icon fab fa-linkedin-in"></i></li>
+          <li class="menu__item"><i class="menu__item--icon fab fa-github-alt"></i></li>
+        </ul>
+      </nav>
+    </div>
+  </article>
 </section>
