--- a/src/scss/layout/form/_share.scss
+++ b/src/scss/layout/form/_share.scss
@@ -15,6 +15,8 @@
     justify-content: space-between;
     text-transform: uppercase;
     flex-wrap: nowrap;
+    padding-top: 10px; 
+    padding-bottom: 30px;
     &--container {
       display: flex;
       justify-content: flex-start;
@@ -56,7 +58,6 @@
   .border {
     border-bottom: solid 1px $color-borderFooter;
     margin: 30px 0 20px;
-    // background-color: red;
     width: 100%;
   }
   &__subsection {
