--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -9,10 +9,10 @@
   border-top: solid 1px $color-borderFooter;
   padding: 18px 0 20px;
   @include tablet {
-    height: 60px;
+    height: 6vh;
     flex-direction: row;
     justify-content: space-between;
-    padding: 10px 40px 10px 41px;
+    padding: 0.98vh 40px 0.98vh 41px;
   }
   &__small {
     @include t($font-main, 0.87rem, rgba(107, 107, 107, 0.5));
