Add functionality to form

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -10,7 +10,7 @@
 
   <label class="fill__label name" for="Name">Nombre Completo</label>
   <input
-    class="fill__input"
+    class="fill__input js-fullName"
     placeholder="María García"
     type="text"
     id="name"
