--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -2,8 +2,8 @@
   <article class="generator__article">
     <div class="generator__article--button1"><i class="far fa-trash-alt"></i>Reset</div>
     <div class="generator__article--container">
-      <h2 class="container__name">Nombre apellido</h2>
-      <h3 class="container__profession">Profesión</h3>
+      <h2 class="container__name js-generatorName">Nombre apellido</h2>
+      <h3 class="container__profession js-generatorJob">Profesión</h3>
       <img class="container__img" src="./assets/images/lady.jpg" alt="" title="" />
       <nav class="container__nav">
         <ul class="menu" >
