Add functionality to the form

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -34,7 +34,7 @@
   </div>
   <label class="fill__label" for="email">Email</label>
   <input
-    class="fill__input"
+    class="fill__input js-email"
     placeholder="maria.garcia@example.com"
     type="email"
     id="email"
