--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -8,7 +8,7 @@
       <nav class="container__nav">
         <ul class="menu" >
           <li class="menu__item"><i class="menu__item--icon fas fa-mobile-alt"></i></li>
-          <li class="menu__item"><i class="menu__item--icon far fa-envelope"></i></li>
+          <li class="menu__item"><a class="js-generatorEmail" href=""><i class="menu__item--icon far fa-envelope"></i></a></li>
           <li class="menu__item"><i class="menu__item--icon fab fa-linkedin-in"></i></li>
           <li class="menu__item"><i class="menu__item--icon fab fa-github-alt"></i></li>
         </ul>
