Add collapsable functionality on cards page

--- a/src/html/partials/form/design.html
+++ b/src/html/partials/form/design.html
@@ -1,14 +1,14 @@
 <!--design section-->
-<fieldset class="design">
+<fieldset class="design js-container">
   <include
     src="./titles.html"
-    classTitle="design__title"
+    classTitle="design__title js-title"
     classTitleContainer="design__title--container"
     classIcon="far fa-object-ungroup icon"
     section="Diseña"
   ></include>
 
-  <div class="design__palette">
+  <div class="design__palette collapsable__content">
     <h3 class="design__palette--colors">Colores</h3>
     <div>
       <label class="design__palette--input" for="">
