--- a/src/html/partials/form/titles.html
+++ b/src/html/partials/form/titles.html
@@ -3,5 +3,5 @@
     <i class="@@classIcon"></i>
     <h2 class="word">@@section</h2>
   </div>
-  <i class="fas fa-chevron-up arrow"></i>
+  <i class="collapsable__icon fas fa-chevron-up arrow"></i>
 </legend>
