Add placeholder corrections and card generator border

--- a/src/html/partials/form/fill.html
+++ b/src/html/partials/form/fill.html
@@ -11,16 +11,16 @@
   <label class="fill__label name" for="Name">Nombre Completo</label>
   <input
     class="fill__input js-fullName"
-    placeholder="María García"
+    placeholder="Ej: Sally Jill"
     type="text"
     id="name"
     name="name"
     required
   />
-  <label class="fill__label" for="job">Trabajo</label>
+  <label class="fill__label" for="job">Puesto</label>
   <input
     class="fill__input job"
-    placeholder="Programadora front-end"
+    placeholder="Ej: Front-end unicorn"
     type="text"
     id="job"
     name="job"
@@ -35,7 +35,7 @@
   <label class="fill__label" for="email">Email</label>
   <input
     class="fill__input js-email"
-    placeholder="maria.garcia@example.com"
+    placeholder="Ej: sally-hill@gmail.com"
     type="email"
     id="email"
     name="email"
@@ -45,7 +45,7 @@
   <label class="fill__label" for="phone">Teléfono</label>
   <input
     class="fill__input"
-    placeholder="+34 666666666"
+    placeholder="Ej:+34 666666666"
     type="tel"
     id="phone"
     name="phone"
@@ -53,20 +53,18 @@
      "
     required
   />
-  <label class="fill__label" for="linkedin"
-    >Nombre de usuario de LinkedIn</label
-  >
+  <label class="fill__label" for="linkedin">Linkedin</label>
   <input
     class="fill__input"
-    placeholder="mariagar"
+    placeholder="Ej: linkedin.com/in/sally.hill"
     type="url"
     id="linkedin"
     name="linkedin"
   />
-  <label class="fill__label" for="github">Nombre de usuario de GitHub</label>
+  <label class="fill__label" for="github">Github</label>
   <input
     class="fill__input"
-    placeholder="mariagar"
+    placeholder="Ej: @sally-hill"
     type="url"
     id="github"
     name="github"
