--- a/src/html/partials/generatorCard.html
+++ b/src/html/partials/generatorCard.html
@@ -1,16 +1,39 @@
 <section class="generator">
   <article class="generator__article">
-    <div class="generator__article--button1"><i class="far fa-trash-alt"></i>Reset</div>
+    <div class="generator__article--button1">
+      <i class="far fa-trash-alt"></i>Reset
+    </div>
     <div class="generator__article--container">
-      <h2 class="container__name js-generatorName">Nombre apellido</h2>
-      <h3 class="container__profession js-generatorJob">Profesión</h3>
-      <img class="container__img" src="./assets/images/lady.jpg" alt="" title="" />
+      <div class="container__nameprofession">
+        <h2 class="container__nameprofession--name js-generatorName">
+          Nombre apellido
+        </h2>
+        <h3 class="container__nameprofession--profession js-generatorJob">
+          Profesión
+        </h3>
+      </div>
+      <img
+        class="container__img"
+        src="./assets/images/lady.jpg"
+        alt=""
+        title=""
+      />
       <nav class="container__nav">
-        <ul class="menu" >
-          <li class="menu__item"><i class="menu__item--icon fas fa-mobile-alt"></i></li>
-          <li class="menu__item"><a class="js-generatorEmail" href=""><i class="menu__item--icon far fa-envelope"></i></a></li>
-          <li class="menu__item"><i class="menu__item--icon fab fa-linkedin-in"></i></li>
-          <li class="menu__item"><i class="menu__item--icon fab fa-github-alt"></i></li>
+        <ul class="menu">
+          <li class="menu__item">
+            <i class="menu__item--icon fas fa-mobile-alt"></i>
+          </li>
+          <li class="menu__item">
+            <a class="js-generatorEmail" href=""
+              ><i class="menu__item--icon far fa-envelope"></i
+            ></a>
+          </li>
+          <li class="menu__item">
+            <i class="menu__item--icon fab fa-linkedin-in"></i>
+          </li>
+          <li class="menu__item">
+            <i class="menu__item--icon fab fa-github-alt"></i>
+          </li>
         </ul>
       </nav>
     </div>
