--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -13,6 +13,7 @@ $color-background: #f5f5f5;
 $color-borderFooter: #d8d8d8;
 $color-border-form: #a2deaf;
 $colorInactive: #d5d5d5;
+$colorPlaceholder: #c5c5c5;
 $palette1-color1: #114e4e;
 $palette1-color2: #438792;
 $palette1-color3: #a2deaf;
